discord-frontend/hartex-discord-commands-test/tests/ui/extra_token.stderr
error: unexpected token: `,`
  --> tests/ui/extra_token.rs:26:28
   |
26 | #[metadata(command_type = 1, extra)]
   |                            ^
